# NXai

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  README.md  ROADMAP.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  scheduler.py
core/: config.py  crypto.py  db.py  events.py  logging.py
core/embeddings/: client.py
core/llm/: client.py
core/models/: __init__.py  ad_detection.py  admin.py  audit_log.py  candidate_post.py  channel_bot.py  enums.py  metrics_snapshot.py  panel_settings.py  pool_post.py  post_version.py  publication.py  source_channel.py  target_channel.py  telethon_session.py  theme.py  types.py  worker_heartbeat.py
core/services/: ad_watchdog.py  admin.py  admin_notify.py  analytics.py  audit.py  backfill.py  crosspost.py  dedup.py  digest.py  effective_settings.py  force_generate.py  heartbeat.py  ingest_candidates.py  media.py  panel_settings.py  persona.py  publisher.py  review.py  rewrite.py  scheduler_pool.py  scoring.py  source_channel_lookup.py  style_extractor.py  target_channels.py  telethon_login.py  trust_score.py
core/statistics/: client.py
deploy/nginx/: nginx.conf
interfaces/api/: auth.py  deps.py  main.py
interfaces/bots/: main.py  notify.py
interfaces/telethon_workers/: main.py
migrations/: README  env.py
migrations/versions/: a1c5e9b2d768_target_crosspost.py  (+15 more)
scripts/: create_admin.py  generate_telethon_session.py
tests/: test_auth.py  test_config.py  test_scheduler_pool.py
web/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
(+45 files in other folders)
